=================
Changes for Crate
=================

Unreleased
==========

 - The array comparison no longer requires extra parentheses for subselects.
   Now it's possible to use `` = ANY (SELECT ...)`` instead of
   `` = ANY ((SELECT ...))``

 - Fix issue where fulltext search with fuzziness='AUTO' throws
   NumberFormatException.

 - BREAKING: Serve admin ui from ``/``
   Admin UI is not accessible via ``_plugin/crate-admin`` anymore. Only via
   ``/admin`` or ``/``.

 - Fix an issue in the ``LIKE`` predicate which prevents using escaped
   backslash before the wildcard.

- Updated crate-admin to ``1.1.0`` which includes the following change:
     - Improved console results table, including data type based colorization,
       alternating row colorization, structured object/array formatting,
       human-readable timestamps, Google Maps link on geo-point
       results & lazy loading on result sets larger than 100 rows.

 - Updated crate-admin to ``1.0.4`` which includes the following change:

     - Fixed getting started display issue on very wide screens.

 - Fixed an issue that caused ``ORDER BY`` clause to be ignored if used
   in combination with ``GROUP BY`` in subselects.
   e.g.: `SELECT x from (SELECT * from t1) as tt
          GROUP BY x ORDER BY x`

 - Allow semi-colon (;) in the end of simple SQL statements.

 - Enhanced performance optimisation of full joins by rewriting them to left,
   right or inner joins when conditions in ``WHERE`` exclude null values.

 - Serve admin ui from `/admin/` instead of `/_plugins/crate-admin/`

 - Added support for filtering and ordering on ``ignored`` object columns.

 - Added support for the double colon (::) cast operator.

 - Upgraded the parser from ANTLR3 to ANTLR4.

2017/01/09 1.0.2
================

 - Updated crate-admin to ``1.0.3`` which includes the following change:

    - Added compatibility with future crate versions which will serve